# hopsworks-mcp

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-test.yml
src/hopsworks_mcp/: __init__.py  client.py  config.py  models.py  server.py
src/hopsworks_mcp/resources/: __init__.py  projects.py
src/hopsworks_mcp/tools/: __init__.py  auth.py  datasets.py  embeddings.py  environments.py  executions.py  expectations.py  external_feature_groups.py  feature_groups.py  feature_store.py  feature_views.py  features.py  flink.py  git.py  jobs.py  kafka.py  model_registry.py  model_serving.py  opensearch.py  projects.py  queries.py  secrets.py  spine_groups.py  training_datasets.py  transformation_functions.py
