[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-hopsworks"
version = "0.1.0"
description = "MCP server for Hopsworks"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.2.0",
    "httpx",
    "pydantic>=2.0.0",
    "hopsworks[python]"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pre-commit",
    "black",
    "ruff",
    "mypy"
]